[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mitmpilot"
version = "0.1.0"
description = "A Python tool for managing, packaging, and sharing mitmproxy addons."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aioshutil>=1.5",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "anyio>=4.11.0",
    "apscheduler>=3.11.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "cachetools>=6.2.1",
    "cryptography>=45.0.7",
    "dateparser>=1.2.2",
    "fastapi>=0.118.2",
    "httpx[socks]>=0.28.1",
    "mitmproxy>=12.2.0",
    "pillow>=12.0.0",
    "psutil>=7.1.2",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "pyotp>=2.9.0",
    "pytelegrambotapi>=4.29.1",
    "python-jose[pycryptodome]>=3.3.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "redis>=6.4.0",
    "requests[socks]>=2.32.5",
    "setproctitle>=1.3.7",
    "sqlalchemy>=2.0.44",
    "uv>=0.9.4",
    "uvicorn>=0.37.0",
    "uvloop>=0.22.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=8.3.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py314"

# Enabled rule sets
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear
    "UP", # pyupgrade
]

# Ignore specific rules
lint.ignore = [
    "E501",
]

# Types of changes to allow when autofixing
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude files or directories
exclude = [
    ".venv",
    "build",
    "dist",
    "migrations",
]

[tool.docformatter]
# 设置默认行长为 88
wrap-summaries = 88
wrap-descriptions = 88

# 开启 Black 兼容模式
black = true
